--- a/docs/team/ahmadhatziq.adoc
+++ b/docs/team/ahmadhatziq.adoc
@@ -101,12 +101,17 @@ from json and re-creating the proper specified model.
 
 include::../UserGuide.adoc[tag=FeatureUndo]
 
+include::../UserGuide.adoc[tag=FeatureUndo]
+
+include::../UserGuide.adoc[tag=FeatureClear]
+
 == Contributions to the Developer Guide
 
 |===
 |_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
 
+=======
 include::../DeveloperGuide.adoc[tag=undoredo]
 
 include::../DeveloperGuide.adoc[tag=storage]
